testsuite/tests/builtins/list_methods/reduce/non_function_fn/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.reduce(fn=(res, i) => res + i))
   │       ────────────────┬───────────────  
   │                       ╰───────────────── Missing value for the "init" parameter
───╯
